# opcua-schemagen

./: .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
schemas/: dataclass.py  ijt_tightening.jsonschema.json  ijt_tightening.schema.json  machinery_jobs.jsonschema.json  machinery_jobs.jsonschema.py  machinery_jobs.py  machinery_jobs.schema.json  machinery_jobs_ext.py  opc.ua.jsonschema.json  opc.ua.services.jsonschema.json  uamodel.isa95_jobcontrol_v2.jsonschema.json  uamodel.machineryjobs.jsonschema.json
scripts/: nodeset.py  opcmodelgen.py  schema.py  schemagen.py
scripts/template/: dataclass.jinja2
src/opcua_schemagen/: jsonschema.py  ns2js.py  schemagen.py
src/ua_schemagen/: ns2js.py  schemagen.py
tests/: jsonschema_test.py  state_machine.md  statemachine_test.py
utils/: jsonschema.py  ns2js.py  xmlparser.py
