[project]
name = "ua-schemagen"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "asyncua>=1.1.8",
    "datamodel-code-generator[ruff]>=0.53.0",
    "typer>=0.20.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "transitions>=0.9.3",
]

[project.scripts]
schemagen = "ua_schemagen.schemagen:app"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"