[project]
name = "opcua-schemagen"
version = "0.1.0"
description = "Generate JSON Schema from OPC UA nodesets/companion specifications"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncua>=1.1.8",
    "datamodel-code-generator[ruff]>=0.53.0",
    "typer>=0.20.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
opcua-schemagen = "opcua_schemagen.schemagen:app"

[project.urls]
Homepage = "https://github.com/aschamberger/opcua-schemagen"
Repository = "https://github.com/aschamberger/opcua-schemagen"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"